--- a/style.css
+++ b/style.css
@@ -20,6 +20,10 @@
     color:#8D0801 !important;
     background-color: currentColor !important;
 }
+.secondary-color-2-1{
+    color: #805E73;
+    background-color: currentColor !important;
+}
 .secondary-shadow-1-0{
     /* color: #BF0603; */
     color: #FC3936;
@@ -43,6 +47,9 @@
 }
 .secondary-shadow-0-0{
     color: #FC3936;
+}
+.secondary-color-2-0{
+    color: #805E73;
 }
     /* @font-face {
         font-family: BebasNeue;
@@ -93,6 +100,7 @@
     position: relative;
     width: 88%;
     height: 16%;
+    max-height: 20% !important;
     display: flex;
 }
 @media screen and (max-width: 2000px){
@@ -116,18 +124,19 @@
         font-size: 1.5rem;
     }
 }
-@media screen and (max-width: 1050px){
-    .rect-box h3{
-        font-size: 1.4rem !important;
-    /* margin-left: 14% !important; */
-    }
-}
 @media screen and (max-width: 1084x){
     .rect-box h2{
         width: 60% !important;
         margin-left: 1% !important;
     }
 }
+@media screen and (max-width: 1050px){
+    .rect-box h3{
+        font-size: 1.4rem !important;
+    /* margin-left: 14% !important; */
+    }
+}
+
 @media screen and (max-width: 995px){
     .rect-box h3{
         font-size: 1.35rem !important;
@@ -160,7 +169,7 @@
 @media screen and (max-width: 800px){
     .rect-box h3{
         padding-top: 2% !important;
-
+        color: white !important;
         margin-left: 1% !important;
         width: 100% !important;
         font-size: 1.3rem !important;
@@ -184,10 +193,12 @@
 
         margin-left: 1% !important;
         padding-top: 2% !important;
+        color: white !important;
         font-size: 1.3rem !important;
     }
     .rect-box h2{
         text-align: start;
+        
         width: 50% !important;
         font-size: 5rem !important;
     }
@@ -198,6 +209,7 @@
 @media screen and (max-width: 614px){
     .rect-box h3{
         padding-top: 2% !important;
+        /* color: black; */
         font-size: 1.3rem !important;
     }
     .rect-box h2{
@@ -262,6 +274,7 @@
     }
     h3{
         font-size: 1.4rem !important;
+        color: white !important;
     }
     .left, .sub-left{
         visibility: hidden;
@@ -374,8 +387,31 @@
     transform: translate(0.0999999rem,-0.0999999rem);
 
 }
+.boxes-container{
+    align-items: bottom;
+    position: relative;
+    padding: 0;
+    margin: 0;
+    height: 100%;
+    list-style: none;
+    display: flex;
+    justify-content: space-around; 
+    flex-wrap: wrap;
+    
+}
 
-
+.box{
+    flex: 1 0 21%;
+    margin: 5px;
+    max-height: 40%;
+    /* width: 100%; */
+    aspect-ratio: 1 / 1 ;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    margin-top: 5%;
+    /* display: flex; */
+}
 .starry-background{
     /* background-color: black; */
     background-image: radial-gradient(white, rgba(255,255,255,.2) 2px, transparent 40px), radial-gradient(white, rgba(255,255,255,.15) 1px, transparent 30px), radial-gradient(white, rgba(255,255,255,.1) 2px, transparent 40px), radial-gradient(rgba(255,255,255,.4), rgba(255,255,255,.1) 2px, transparent 30px);
