--- a/style.css
+++ b/style.css
@@ -387,31 +387,72 @@
     transform: translate(0.0999999rem,-0.0999999rem);
 
 }
+.portfolio-header{
+    margin-top: 5%;
+    text-align: center;
+    font-size: 5.4rem;
+    margin-bottom: 0;
+}
 .boxes-container{
     align-items: bottom;
     position: relative;
     padding: 0;
     margin: 0;
-    height: 100%;
+    height: 80%;
     list-style: none;
     display: flex;
     justify-content: space-around; 
     flex-wrap: wrap;
+    /* margin-top: 10%; */
     
 }
-
+/* TODO: MAKE RESPONSIVE-- MAYBE SINGLE, ROTATING BOX AT MOBILE RESOLUTION? */
 .box{
-    flex: 1 0 21%;
+    flex: 1 0 30%;
     margin: 5px;
-    max-height: 40%;
+    max-height:40vh;
     /* width: 100%; */
     aspect-ratio: 1 / 1 ;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
-    align-self: center;
-    margin-top: 5%;
-    /* display: flex; */
+    /* align-self: center; */
+    /* margin-top: 5%; */
+    flex-direction: column;
+    overflow: scroll;
+    display: flex;
 }
+.box .content-container {
+    color: white;
+    display: flex;
+    flex: 1;
+  }
+  
+.box .image-container,
+  .box .text-container {
+    flex: 1;
+    font-size: 1.3rem;
+    padding: 20px;
+    padding-bottom: 0px; /* Adjust the padding as needed */
+  }
+  
+.box .content-container  img {
+    max-width: 95%;
+    height: auto;
+    display: block;
+  }
+  
+  .box .title-container h2 {
+    margin: 0; 
+    color: white;/* Remove default margin for h2 */
+  }
+  .box .footer-container{
+    color: white;
+    flex: 1;
+    word-wrap: break-word;
+    font-size:1.5rem;
+    margin: 5px;
+    margin-top: 0px;
+  }
 .starry-background{
     /* background-color: black; */
     background-image: radial-gradient(white, rgba(255,255,255,.2) 2px, transparent 40px), radial-gradient(white, rgba(255,255,255,.15) 1px, transparent 30px), radial-gradient(white, rgba(255,255,255,.1) 2px, transparent 40px), radial-gradient(rgba(255,255,255,.4), rgba(255,255,255,.1) 2px, transparent 30px);
