--- a/portfolio.css
+++ b/portfolio.css
@@ -8,12 +8,15 @@
     color:#042334 !important;
     background-color: currentColor !important;
 }
+.nav-link{
+    display: initial !important;
+}
 .primary-color-1-1{
-    color: #F5F1ED !important;
+    color: #899697 !important;
     background-color: currentColor !important;
 }
 .secondary-color-0-1{
-    color: #779287!important;
+    color: #b09a5d!important;
     background-color: currentColor !important;
 }
 .secondary-color-1-1{
@@ -39,7 +42,7 @@
     color:transparent;
 }
 .secondary-color-0-0{
-    color: #779287;
+    color: #2db37d;
 }
 .secondary-color-1-0{
     color:#8D0801;
@@ -51,62 +54,322 @@
 .secondary-color-2-0{
     color: #805E73;
 }
-
-.boxes-container{
-    align-items: bottom;
-    position: relative;
-    padding: 0;
-    margin: 0;
-    height: 80%;
-    list-style: none;
-    display: flex;
-    justify-content: space-around; 
-    flex-wrap: wrap;
-    margin-top: 10%;
-    
+   
+*{  
+    font-family: 'Bebas Neue', sans-serif;
 }
-
-.box{
-    flex: 1 0 30%;
-    margin: 5px;
-    max-height:40vh;
-    /* width: 100%; */
-    aspect-ratio: 1 / 1 ;
-    /* justify-content: center; */
-    align-items: center;
-    /* align-self: center; */
-    /* margin-top: 5%; */
-    flex-direction: column;
+html, body{
+    height: 100%;
+    width: 100%;
+    transition: background-color .3s ease;
+    background-color: #000;
     overflow: scroll;
-    display: flex;
+    /* overflow-x: hidden; */
+    contain: paint;
 }
-.box .content-container {
-    color: white;
-    display: flex;
-    flex: 1;
-  }
-  
-.box .image-container,
-  .box .text-container {
-    flex: 1;
-    padding: 20px;
-    padding-bottom: 0px; /* Adjust the padding as needed */
-  }
-  
+header, footer{
+    flex: 0 0 150px;
+    width:100%;
+    height: auto;
+    max-height: 6vh;
+    align-self: flex-start;
+    max-height: 60vh;
+}
+nav, header{
+    max-height: 7vh !important;
+    display: initial;
+}
+
 .box .content-container  img {
-    max-width: 100%;
+    max-width: 95%;
     height: auto;
     display: block;
   }
-  
-  .box .title-container h2 {
+.title-box{
+    flex-basis: 100% !important;
+}
+  .info-boxes-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    top: 0;
+    /* flex-flow: column; */
+    flex-wrap: wrap;
+    justify-content: center;
+    position: relative;
+    /* align-items: ; */
+}
+.main-image{
+    /* height: 100%; */
+    z-index: 1;
+    display: flex;
+    flex-basis: 22%
+}
+
+.rect-box{
+    flex-basis:77%;
+    position: relative;
+    width: 40%;
+    height: 16%;
+    margin: auto;
+
+    max-height: 20% !important;
+    display: flex;
+    flex-direction: column;
+}
+.overlay-text-container{
+    max-height: 10rem;
+    margin-bottom: 20px;
+}
+.bottom{
+    flex-basis: 95%;
+    width: 95%;
+    margin: auto;
+}
+
+@media screen and (max-width: 2000px){
+    .rect-box h3{
+        font-size: min(3vh, 1.5rem) !important;
+    }
+    .rect-box h2{
+        font-size: min(6.8rem, 11vh) !important;
+    }
+}
+@media screen and (max-width: 1270px){
+    .rect-box h3{
+        padding-top: 1%;
+        font-size: min(1.4rem, 3vh) !important;
+        margin-left: 5% !important;    
+    }
+    .rect-box h2{
+        font-size: 9.5vh !important;
+    }
+}
+ 
+@media screen and (max-width: 1180px){
+    .rect-box h3{
+        font-size: min(3vh, 1.5rem);
+    }
+}
+@media screen and (max-width: 1084x){
+    .rect-box h2{
+        margin-left: 1% !important;
+    }
+}
+@media screen and (max-width: 1050px){
+    .rect-box h3{
+        font-size: min(1.4rem,3vh) !important;
+    /* margin-left: 14% !important; */
+    }
+}
+
+@media screen and (max-width: 995px){
+    .rect-box h3{
+        font-size: min(1.3rem, 2.8vh) !important;
+    }
+    .rect-box{
+        flex-basis: 100%;
+    }
+}
+
+@media screen and (max-width: 895px){
+    .rect-box h3{
+        font-size: 1.18rem !important;
+        padding: 0% !important;
+        margin-left: 1% !important;
+    }
+    .rect-box h2{
+        margin-right: 5%;
+        /* width: 80% !important; */
+    }
+
+}
+
+@media screen and (max-width: 845px){
+    .rect-box h3{
+        font-size: 1.2rem !important;
+
+        margin-left: 1% !important;
+    }
+
+}
+
+@media screen and (max-width: 810px){
+    .rect-box h3{
+        /* padding-top: 2% !important; */
+        color: white !important;
+        margin-left: 1% !important;
+        width: 100% !important;
+        font-size: min(1.3rem, 2.5vh) !important;
+    }
+    .rect-box{
+        flex-basis: 100%;
+        height: 50% !important;
+    }
+    .rect-box h2{
+        text-align: start;
+        width: 100% !important;
+        font-size: 7vh !important;    
+    }
+    .secondary-image{
+        display:block !important;
+    }
+    .rect-box{
+        flex-direction: column !important;
+        margin: 2px !important;
+        height: 25% !important;
+    }
+}
+@media screen and (max-width: 750px) {
+    .content-container .text-container, .footer-container{
+        display: none !important;
+    }
+}
+@media screen and (max-width: 745px) {
+    .landing-section h1{
+        font-size: min(21vw, 26vh) !important;
+    }
+    .subtext{
+        font-size: 2.8rem !important;
+    }
+}
+@media screen and (max-width: 730px){
+    .rect-box h3{
+
+        margin-left: 1% !important;
+        /* padding-top: 2% !important; */
+        color: white !important;
+        font-size: min(1.1rem,2.3vh) !important;
+    }
+    .rect-box h2{
+        text-align: start;
+        margin-bottom: 0rem !important;
+        width: 50% !important;
+        font-size: 3rem !important;
+    }
+
+}
+
+@media screen and (max-width: 665px) {
+    .landing-section h1{
+        /* line-height: 15rem; */
+        /* padding-top: 0% !important; */
+        font-size: min(19vw, 20vh) !important;
+    }   
+}
+
+@media screen and (max-width:595px) {
+    .nav-link{
+        padding: 0 !important;
+    }
+}
+@media screen and (max-width: 580px){
+    .rect-box h3{
+        /* padding-top: 2% !important; */
+        font-size: min(2vh, 1rem) !important;
+        width: 100% !important;
+    }
+    .rect-box h2{
+        text-align: start;
+        width: 50% !important;
+        /* font-size: min(9vh,12vw) !important; */
+        font-size: min(5.4vh, 6.5vw) !important;
+    }
+    .rect-box h1{
+        letter-spacing: 0.5rem !important;
+    }
+}
+
+@media screen and (max-width: 475px) {
+    .nav-link{
+        padding: 0 !important;
+    }
+    a h3{
+        font-size: clamp(1px, 4vw, 5vh) !important;
+    }
+}
+@media screen and (max-width: 455px) {
+    h1{
+        font-size: 5rem !important;
+        line-height: 5rem !important;
+        padding-top: 3% !important;
+    }
+    .right{
+        top: 10rem !important;
+        right: 0rem !important;
+    }
+    .subtext{
+        font-size: 2rem !important;
+        width: 100% !important;
+    }
+    .sub-right{
+        right: 4.7rem !important;
+        top: 15.5rem !important;
+    }
+    h3{
+        font-size: 1.4rem !important;
+        color: white !important;
+    }
+
+
+}
+@media screen and (max-width: 340px) {
+    .rect-box h1{
+       font-size: min(17vw,18vh) !important;    
+    }
+    
+}
+
+.rect-box::after{    
+    z-index: 1;
+    content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  border: 12px solid currentColor;
+  display: inline-block;
+}
+.rect-box h1{
+    /* padding-top: 1%; */
+    font-weight: bold;
+    font-size: min(18vh, 12vw);
+    letter-spacing: 1rem;
+    position: relative;
+    text-align: left;
+    z-index: 0;
+}
+.rect-box h2{
+    position: relative;
+    font-size: 7.3rem;
+    /* padding-top: 1%; */
+    font-weight: bold;
+    z-index: 2;
+    width: 100%;
+    left: 1rem;
+}
+.rect-box h3{
+    position: relative;
+    font-family: 'Anonymous Pro', monospace;
+    padding-top: 1%;
+
+    /* align-self: flex-end; */
+    z-index: 2;
+    /* font-size: 100%; */
+    width: 90%;
+    height: 100%;
+    margin-left: 2%;
+}
+a h3{
+    text-align: end !important;
+    margin-top: 0.5rem !important;
+    line-height: inherit !important;
+}
+.box .title-container h2 {
     margin: 0; 
+    padding: 5px;
     color: white;/* Remove default margin for h2 */
-  }
-  .box .footer-container{
-    color: white;
-    flex: 1;
-    word-wrap: break-word;
-    margin: 5px;
-    margin-top: 0px;
   }
