--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@
     color: #b09a5d!important;
     background-color: currentColor !important;
 }
+
 .secondary-color-1-1{
     color:#8D0801 !important;
     background-color: currentColor !important;
@@ -106,6 +107,15 @@
     max-height: 20% !important;
     display: flex;
 }
+@media screen and (min-width:700px) {
+    .box .footer-container{
+        display: none !important;
+    }
+    .box .content-container .text-container{
+        display: none !important;
+    }
+    
+}   
 @media screen and (max-width: 2000px){
     .rect-box h3{
         font-size: min(3vh, 2vw) !important;
@@ -457,7 +467,6 @@
     /* align-self: center; */
     /* margin-top: 5%; */
     flex-direction: column;
-    overflow: scroll;
     border-radius: 15px;
     display: flex;
 }
@@ -477,8 +486,8 @@
   }
   
 .box .content-container  img {
-    max-width: 95%;
-    height: auto;
+    max-height: 60%;
+    /* height: auto; */
     display: block;
   }
   
