--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@
     } */
 *{  
     font-family: 'Bebas Neue', sans-serif;
+    box-sizing: border-box;
 }
 .center-image{
     /* box-sizing: border-box; */
@@ -85,6 +86,14 @@
     left: 50%;
     transform: translate(-50%,-50%);
     background-image: radial-gradient(circle,black 50px, black 50px);
+    opacity: 1.0;
+    
+    background-repeat: no-repeat;
+    -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 2s; /* Firefox < 16 */
+        -ms-animation: fadein 2s; /* Internet Explorer */
+         -o-animation: fadein 2s; /* Opera < 12.1 */
+            animation: fadein 2s;
 
 }
 .info-boxes-container{
@@ -250,7 +259,8 @@
 
 @media screen and (max-width: 645px), screen and (max-height:480px){
     .left, .sub-left{
-        visibility: hidden;
+        visibility: hidden !important;
+        animation: none !important;
     }
 }
 @media screen and (max-width: 614px){
@@ -305,6 +315,7 @@
         width: 100% !important;
     }
     .sub-right{
+
         right: 4.7rem !important;
         top: 15.5rem !important;
     }
@@ -313,7 +324,8 @@
         color: white !important;
     }
     .left, .sub-left{
-        visibility: hidden;
+        visibility: hidden !important;
+        /* animation: none !important; */
     }
 
 }
@@ -469,6 +481,7 @@
     flex-direction: column;
     border-radius: 15px;
     display: flex;
+    
 }
 
 .box .content-container {
@@ -481,12 +494,16 @@
   .box .text-container {
     flex: 1;
     font-size: 1.3rem;
+
+  align-items: center;
     padding: 20px;
     padding-bottom: 5px; /* Adjust the padding as needed */
   }
   
 .box .content-container  img {
-    max-height: 60%;
+    max-height: 100%;
+    
+  align-items: center;
     /* height: auto; */
     display: block;
   }
@@ -522,7 +539,7 @@
 html, body{
     height: auto;
     width: 100%;
-    transition: background-color .3s ease;
+    transition: background-color .15s ease;
     background-color: #000;
     overflow: visible;
     /* overflow-x: hidden; */
@@ -627,3 +644,37 @@ main{
     width: 100%;
 }
 
+
+@keyframes fadein {
+    0% { opacity: 0; }
+    25% { opacity: 0; }
+    100%   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    0% { opacity: 0; }
+    25% { opacity: 0; }
+    100%   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    0% { opacity: 0; }
+    25% { opacity: 0; }
+    100%   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    0% { opacity: 0; }
+    25% { opacity: 0; }
+    100%   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    0% { opacity: 0; }
+    25% { opacity: 0; }
+    100%   { opacity: 1; }
+}
