--- a/portfolio.css
+++ b/portfolio.css
@@ -107,6 +107,7 @@ nav, header{
     z-index: 1;
     display: flex;
     flex-basis: 22%;
+    max-width: 20vw;
     margin-left: 2.5%;
 
 }
@@ -116,17 +117,19 @@ nav, header{
     text-align: center;
 }
 .rect-box{
-    flex-basis: 73%;
+    flex-basis: 70%;
     position: relative;
     width: 100%;
     max-height: 20% !important;
     display: flex;
     flex-direction: column;
     margin-right: 2.5%;
+    margin-left:auto;
 }
 .overlay-text-container{
     max-height: 10rem;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
+
 }
 .bottom{
     flex-basis: 95%;
@@ -372,7 +375,7 @@ nav, header{
     margin-left: 2%;
 }
 a h3{
-    text-align: end !important;
+    /* text-align: end !important; */
     margin-top: 0.5rem !important;
     line-height: inherit !important;
 }
