--- a/style.css
+++ b/style.css
@@ -89,11 +89,11 @@
     opacity: 1.0;
     
     background-repeat: no-repeat;
-    -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
-       -moz-animation: fadein 2s; /* Firefox < 16 */
-        -ms-animation: fadein 2s; /* Internet Explorer */
-         -o-animation: fadein 2s; /* Opera < 12.1 */
-            animation: fadein 2s;
+    -webkit-animation: altfadein 16s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: altfadein 16s; /* Firefox < 16 */
+        -ms-animation: altfadein 16s; /* Internet Explorer */
+         -o-animation: altfadein 16s; /* Opera < 12.1 */
+            animation: altfadein 16s;
 
 }
 .info-boxes-container{
@@ -522,11 +522,23 @@
     padding: 5px;
     margin-top: 0px;
   }
-.starry-background{
+  .starry-background::before{
+    left:0;
+    content:"";
+    opacity: 0;
+    position: absolute;
+    width: 100%;height: 100%;
     /* background-color: black; */
-    background-image: radial-gradient(white, rgba(255,255,255,.2) 2px, transparent 40px), radial-gradient(white, rgba(255,255,255,.15) 1px, transparent 30px), radial-gradient(white, rgba(255,255,255,.1) 2px, transparent 40px), radial-gradient(rgba(255,255,255,.4), rgba(255,255,255,.1) 2px, transparent 30px);
     background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
     background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
+    opacity: 1.0;
+    background-image: radial-gradient(white, rgba(255,255,255,.2) 2px, transparent 40px), radial-gradient(white, rgba(255,255,255,.15) 1px, transparent 30px), radial-gradient(white, rgba(255,255,255,.1) 2px, transparent 40px), radial-gradient(rgba(255,255,255,.4), rgba(255,255,255,.1) 2px, transparent 30px); 
+    /* background-repeat: no-repeat; */
+    -webkit-animation: fadein 16s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 16s; /* Firefox < 16 */
+        -ms-animation: fadein 16s; /* Internet Explorer */
+         -o-animation: fadein 16s; /* Opera < 12.1 */
+            animation: fadein 16s;
 }
 .moon-overlay{
     background-image: url("tag16_05_00000.png");
@@ -574,7 +586,6 @@ header, footer{
     justify-content: center;
 }
 a h3{
-    text-align: end !important;
     margin-top: 0.5rem !important;
     line-height: inherit !important;
 }
@@ -669,6 +680,42 @@ main{
 @-ms-keyframes fadein {
     0% { opacity: 0; }
     25% { opacity: 0; }
+    100%   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    0% { opacity: 0; }
+    25% { opacity: 0; }
+    100%   { opacity: 1; }
+}
+
+
+
+@keyframes altfadein {
+    0% { opacity: 0; }
+    50% { opacity: 0; }
+    100%   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes altfadein {
+    0% { opacity: 0; }
+    50% { opacity: 0; }
+    100%   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes altfadein {
+    0% { opacity: 0; }
+    50% { opacity: 0; }
+    100%   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes altfadein {
+    0% { opacity: 0; }
+    50% { opacity: 0; }
     100%   { opacity: 1; }
 }
 
