--- a/css/carousel.css
+++ b/css/carousel.css
@@ -29,7 +29,7 @@ height: 80%;
     position: absolute;
     top:0;
     height: 100%;
-    max-height: 900px;
+    max-height: min(900px,60vh);
     margin: auto;
     display: block;
     flex-direction: column;
