--- a/style.css
+++ b/style.css
@@ -441,7 +441,7 @@
     color: transparent;
     z-index: 1 !important;
     top:0;
-    -webkit-text-stroke-width: 0.25rem;
+    -webkit-text-stroke-width: 0.33vw;
     -webkit-text-stroke-color: #F5F1ED;
     outline-offset: 0px;
     paint-order: stroke fill;
